--- a/render.yaml
+++ b/render.yaml
@@ -1,12 +1,12 @@
 services:
   - type: web
-    name: insider-tracker-backend # 서버 이름
-    runtime: java                # <-- ⭐️ 이게 핵심입니다. "Java 환경"을 강제로 지정
+    name: insider-tracker-backend
+    runtime: java
     rootDir: backend
     buildCommand: "./gradlew build -x test"
     startCommand: "java -jar build/libs/backend-0.0.1-SNAPSHOT.jar"
     envVars:
-      - key: secapi.api.key    # application.properties의 키 이름
-        value: ${secapi_api_key} # 6단계에서 이 변수(secapi_api_key)를 입력할 겁니다.
-      - key: finnhub.api.key   # application.properties의 키 이름
-        value: ${finnhub_api_key} # 6단계에서 이 변수(finnhub_api_key)를 입력할 겁니다.
+      - key: secapi.api.key
+        value: ${secapi_api_key}
+      - key: finnhub.api.key
+        value: ${finnhub_api_key}
