--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,9 @@
 services:
   - type: web
     name: insider-tracker-backend
-    runtime: java
-    rootDir: backend
-    buildCommand: "./gradlew build -x test"
-    startCommand: "java -jar build/libs/backend-0.0.1-SNAPSHOT.jar"
+    runtime: docker
+    rootDir: .
+    dockerfilePath: ./Dockerfile
     envVars:
       - key: secapi.api.key
         value: ${secapi_api_key}
